--- a/prototype/index.html
+++ b/prototype/index.html
@@ -117,7 +117,7 @@
 
     <footer class="primary">
       <h6>
-        &copy; 2025 Thomas Wallace —
+        &copy; 2025 Charles Carlisle —
         <a href="mailto:mail@ualr.edu">Email me</a> —
         <a href="#top">Back to Top</a>
       </h6>
