Prototype HTML5 Assignment Submission

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -3,7 +3,7 @@
 <!-- Declares document language for accessibility and SEO -->
 
 <head>
-  <title>Prototype HTML Document</title> <!-- Shown in browser tab and bookmarks -->
+  <title>Prototype HTML5 Document</title> <!-- Shown in browser tab and bookmarks -->
   <meta charset="utf-8" /> <!-- Sets character encoding to UTF-8 -->
   <meta name="viewport" content="width=device-width, initial-scale=1" /> <!-- Makes page responsive -->
   <meta name="description" content="Brief history and information about UA Little Rock" /> <!-- SEO description -->
