Prototype HTML5 Assignment Submission

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>Charles Carlisle</h1>
   <nav>
     <ul>
-        <li><a href="prototype/index.html">Prototype HTML Document</a></li>
+        <li><a href="prototype/index.html">Prototype HTML5 Document</a></li>
     </ul>
   </nav>
 </body>
