--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
   <title>IFSC 11003 - Web Technologies | Charles Carlisle</title>
   <meta name="description" content="Keyword Rich Description">
   <meta name="author" content="Charles Carlisle">
+  <link href="assets/css/style.css" rel="stylesheet" />
 </head>
 <body>
   <h1>Charles Carlisle</h1>
   <nav>
     <ul>
         <li><a href="prototype/index.html" title="Prototype HTML5 Document">Prototype HTML5 Document</a></li>
+        <li><a href="css-demo/index.html" title="CSS Demo Project">CSS Demo</a></li>
+
     </ul>
   </nav>
 </body>
