--- a/css-demo/index.html
+++ b/css-demo/index.html
@@ -7,6 +7,9 @@
   <meta name="description" content="Keyword rich narrative on site purpose">
   <meta name="author" content="Charles Carlisle">
   <link href="assets/css/style.css" rel="stylesheet"
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -92,7 +95,7 @@
   <!--#secondary -->
   <!--#content -->
 
-  <footer id="colophon" role="contentinfo">
+  <footer id="colophon" class="primary" role="contentinfo">
     <h6>&copy; 2025 Your Name</h6>
   </footer>
 </body>
