--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul>
         <li><a href="prototype/index.html" title="Prototype HTML5 Document">Prototype HTML5 Document</a></li>
         <li><a href="css-demo/index.html" title="CSS Demo Project">CSS Demo</a></li>
+        <li><a href="assets/img/Flexbox.png" title="Flexbox Assigment">Flexbox Froggy</a></li>
 
     </ul>
   </nav>
