--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="prototype/index.html" title="Prototype HTML5 Document">Prototype HTML5 Document</a></li>
         <li><a href="css-demo/index.html" title="CSS Demo Project">CSS Demo</a></li>
         <li><a href="assets/img/Flexbox.png" title="Flexbox Assigment">Flexbox Froggy</a></li>
+        <li><a href="assets/img/CSSDiner.png" title="CSS Diner EC">CSS Diner</a></li>
 
     </ul>
   </nav>
