Add background color to complementary aside and update footer copyright name

--- a/css-demo/index.html
+++ b/css-demo/index.html
@@ -96,7 +96,7 @@
   <!--#content -->
 
   <footer id="colophon" class="primary" role="contentinfo">
-    <h6>&copy; 2025 Your Name</h6>
+    <h6>&copy; 2025 Charles Carlisle</h6>
   </footer>
 </body>
 
