--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
         <li><a href="css-demo/index.html" title="CSS Demo Project">CSS Demo</a></li>
         <li><a href="assets/img/Flexbox.png" title="Flexbox Assigment">Flexbox Froggy</a></li>
         <li><a href="assets/img/CSSDiner.png" title="CSS Diner EC">CSS Diner</a></li>
+        <li>Positioning Lab
+          <ul>
+            <li><a href="positioning-lab/float-1.html">Float 1</a></li>
+            <li><a href="positioning-lab/float-2.html">Float 2</a></li>
+            <li><a href="positioning-lab/absolute-1.html">Absolute 1</a></li>
+            <li><a href="positioning-lab/absolute-2.html">Absolute 2</a></li>
 
+          </ul>
+        </li>
     </ul>
   </nav>
 </body>
