--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <ul>
         <li><a href="prototype/index.html" title="Prototype HTML5 Document">Prototype HTML5 Document</a></li>
         <li><a href="css-demo/index.html" title="CSS Demo Project">CSS Demo</a></li>
-        <li><a href="assets/img/Flexbox.png" title="Flexbox Assigment">Flexbox Froggy</a></li>
-        <li><a href="assets/img/CSSDiner.png" title="CSS Diner EC">CSS Diner</a></li>
+        <li><a href="assets/img/flexbox.png" title="Flexbox Assigment">Flexbox Froggy</a></li>
+        <li><a href="assets/img/cssdiner.png" title="CSS Diner EC">CSS Diner</a></li>
         <li>Positioning Lab
           <ul>
             <li><a href="positioning-lab/float-1.html">Float 1</a></li>
