--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <li><a href="assets/img/cssdiner.png" title="CSS Diner EC">CSS Diner</a></li>
         <li>Positioning Lab
           <ul>
-            <li><a href="positioning-lab/float-1.html">Float 1</a></li>
-            <li><a href="positioning-lab/float-2.html">Float 2</a></li>
-            <li><a href="positioning-lab/absolute-1.html">Absolute 1</a></li>
-            <li><a href="positioning-lab/absolute-2.html">Absolute 2</a></li>
+            <li><a href="positioning-lab/float-1.html">float-1</a></li>
+            <li><a href="positioning-lab/float-2.html">float-2</a></li>
+            <li><a href="positioning-lab/absolute-1.html">absolute-1</a></li>
+            <li><a href="positioning-lab/absolute-2.html">absolute-2</a></li>
 
           </ul>
         </li>
