--- a/positioning-lab/float-1.html
+++ b/positioning-lab/float-1.html
@@ -11,11 +11,13 @@
     html {
       box-sizing: border-box;
     }
+
     *,
     *:before,
     *:after {
       box-sizing: inherit;
     }
+
     body {
       background-color: #ECECEC;
       font-weight: bold;
@@ -24,36 +26,83 @@
       text-align: center;
       line-height: 24px;
     }
+
     #wrapper {
       background-color: #FFF;
       border: 1px solid #c0c0c0;
       width: 800px;
-      margin-right: auto;
-      margin-left: auto;
+      margin: 0 auto;
       text-shadow: 2px 2px #000;
+      padding: 20px;
+      overflow: hidden;
     }
+
+    /* ---- Individual Box Styles ---- */
     #navy {
       background-color: #001f3f;
+      width: 48%;
+      height: 120px;
+      float: left;
+      margin: 1%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 18px;
     }
+
     #teal {
       background-color: #39CCCC;
+      width: 48%;
+      height: 120px;
+      float: right;
+      margin: 1%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 18px;
     }
+
     #blue {
       background-color: #0074D9;
+      width: 48%;
+      height: 120px;
+      float: left;
+      margin: 1%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 18px;
     }
+
     #aqua {
       background-color: #7FDBFF;
+      width: 48%;
+      height: 120px;
+      float: right;
+      margin: 1%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 18px;
     }
+
     #footer {
       background-color: #666;
+      clear: both;
+      height: 40px;
+      line-height: 40px;
+      color: white;
+      margin-top: 10px;
     }
+
     h1 {
       color: #000;
       font-weight: normal;
-      padding: 50px;
+      padding: 30px;
     }
   </style>
 </head>
+
 <body>
   <h1>float-1</h1>
   <section id="wrapper">
