Update dimensions of individual boxes in float-1.html for consistency

--- a/positioning-lab/float-1.html
+++ b/positioning-lab/float-1.html
@@ -40,8 +40,8 @@
     /* ---- Individual Box Styles ---- */
     #navy {
       background-color: #001f3f;
-      width: 48%;
-      height: 120px;
+      width: 370px;
+      height: 150px;
       float: left;
       margin: 1%;
       display: flex;
@@ -52,8 +52,8 @@
 
     #teal {
       background-color: #39CCCC;
-      width: 48%;
-      height: 120px;
+      width: 370px;
+      height: 150px;
       float: right;
       margin: 1%;
       display: flex;
@@ -64,8 +64,8 @@
 
     #blue {
       background-color: #0074D9;
-      width: 48%;
-      height: 120px;
+      width: 370px;
+      height: 150px;
       float: left;
       margin: 1%;
       display: flex;
@@ -76,8 +76,8 @@
 
     #aqua {
       background-color: #7FDBFF;
-      width: 48%;
-      height: 120px;
+      width: 370px;
+      height: 150px;
       float: right;
       margin: 1%;
       display: flex;
