--- a/positioning-lab/float-1.html
+++ b/positioning-lab/float-1.html
@@ -43,7 +43,8 @@
       width: 370px;
       height: 150px;
       float: left;
-      margin: 1%;
+      margin-right: 20px;
+      margin-bottom: 20px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -54,8 +55,8 @@
       background-color: #39CCCC;
       width: 370px;
       height: 150px;
-      float: right;
-      margin: 1%;
+      float: left;
+      margin-bottom: 20px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -67,7 +68,9 @@
       width: 370px;
       height: 150px;
       float: left;
-      margin: 1%;
+      clear: left;
+      margin-right: 20px;
+      margin-bottom: 20px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -78,8 +81,8 @@
       background-color: #7FDBFF;
       width: 370px;
       height: 150px;
-      float: right;
-      margin: 1%;
+      float: left;
+      margin-bottom: 20px;
       display: flex;
       justify-content: center;
       align-items: center;
