--- a/positioning-lab/float-1.html
+++ b/positioning-lab/float-1.html
@@ -55,7 +55,7 @@
       background-color: #39CCCC;
       width: 370px;
       height: 150px;
-      float: left;
+      float: right;
       margin-bottom: 20px;
       display: flex;
       justify-content: center;
@@ -81,7 +81,7 @@
       background-color: #7FDBFF;
       width: 370px;
       height: 150px;
-      float: left;
+      float: right;
       margin-bottom: 20px;
       display: flex;
       justify-content: center;
