--- a/positioning-lab/float-1.html
+++ b/positioning-lab/float-1.html
@@ -38,7 +38,7 @@
       float: left;
       margin-right: 15px;         /* gutter to the right */
       margin-bottom: 10px;        /* row gap */
-      display: flex; align-items: center; justify-content: center;
+      align-items: center; justify-content: center;
       font-size: 18px;
     }
 
@@ -47,7 +47,7 @@
       width: 360px; height: 150px;
       float: left;                /* sit beside #navy */
       margin-bottom: 10px;
-      display: flex; align-items: center; justify-content: center;
+      align-items: center; justify-content: center;
       font-size: 18px;
     }
 
@@ -58,7 +58,7 @@
       clear: left;                /* start second row */
       margin-right: 15px;
       margin-bottom: 10px;
-      display: flex; align-items: center; justify-content: center;
+      align-items: center; justify-content: center;
       font-size: 18px;
     }
 
@@ -67,7 +67,7 @@
       width: 360px; height: 150px;
       float: left;
       margin-bottom: 10px;
-      display: flex; align-items: center; justify-content: center;
+      align-items: center; justify-content: center;
       font-size: 18px;
     }
 
