--- a/positioning-lab/float-1.html
+++ b/positioning-lab/float-1.html
@@ -24,6 +24,7 @@
       width: 800px;
       margin: 0 auto;
       text-shadow: 2px 2px #000;
+      padding: auto;
       overflow: hidden;           /* contain floats */
     }
 
