--- a/positioning-lab/float-1.html
+++ b/positioning-lab/float-1.html
@@ -24,7 +24,7 @@
       width: 800px;
       margin: 0 auto;
       text-shadow: 2px 2px #000;
-      padding: auto;
+      padding: 20px;
       overflow: hidden;           /* contain floats */
     }
 
