--- a/positioning-lab/float-1.html
+++ b/positioning-lab/float-1.html
@@ -77,7 +77,7 @@
       height: 40px; line-height: 40px;
       color: #FFF;
       margin-top: 10px;
-      width : 100%;
+      width : auto;
     }
 
     h1 {
