--- a/positioning-lab/float-2.html
+++ b/positioning-lab/float-2.html
@@ -11,11 +11,10 @@
     html {
       box-sizing: border-box;
     }
-    *,
-    *:before,
-    *:after {
+    *, *:before, *:after {
       box-sizing: inherit;
     }
+
     body {
       background-color: #ECECEC;
       font-weight: bold;
@@ -24,14 +23,25 @@
       text-align: center;
       line-height: 24px;
     }
+
     #wrapper {
       background-color: #FFF;
       border: 1px solid #c0c0c0;
       width: 800px;
-      margin-right: auto;
-      margin-left: auto;
+      margin: 0 auto;
       text-shadow: 2px 2px #000;
+      padding: 20px;
     }
+
+    /* Colored Boxes */
+    #navy, #teal, #blue, #aqua {
+      width: 170px;
+      height: 150px;
+      float: left;
+      margin-right: 20px;
+      line-height: 150px; /* vertically center text */
+    }
+
     #navy {
       background-color: #001f3f;
     }
@@ -43,14 +53,22 @@
     }
     #aqua {
       background-color: #7FDBFF;
+      margin-right: 0; /* last one, no margin */
     }
+
+    /* Footer */
     #footer {
       background-color: #666;
+      clear: both;
+      padding: 10px;
+      margin-top: 20px;
     }
+
     h1 {
       color: #000;
       font-weight: normal;
       padding: 50px;
+      text-shadow: none;
     }
   </style>
 </head>
@@ -61,8 +79,8 @@
     <div id="teal">Teal</div>
     <div id="blue">Blue</div>
     <div id="aqua">Aqua</div>
+
     <div id="footer">Footer</div>
   </section>
 </body>
-
 </html>
