--- a/positioning-lab/float-2.html
+++ b/positioning-lab/float-2.html
@@ -34,13 +34,14 @@
     }
 
     /* Colored Boxes */
-    #navy, #teal, #blue, #aqua {
-      width: 170px;
-      height: 150px;
-      float: left;
-      margin-right: 20px;
-      line-height: 150px; /* vertically center text */
-    }
+  #navy, #teal, #blue, #aqua {
+    width: 170px;
+    height: 150px;
+    float: left;
+    margin-right: 20px;
+    line-height: 120px; /* adjust vertical centering */
+    padding-bottom: 30px; /* pushes footer lower */
+}
 
     #navy {
       background-color: #001f3f;
