--- a/positioning-lab/float-2.html
+++ b/positioning-lab/float-2.html
@@ -45,16 +45,20 @@
 
     #navy {
       background-color: #001f3f;
+      padding-bottom: 50px;
     }
     #teal {
       background-color: #39CCCC;
+      padding-bottom: 50px;
     }
     #blue {
       background-color: #0074D9;
+      padding-bottom: 50px;
     }
     #aqua {
       background-color: #7FDBFF;
       margin-right: 0; /* last one, no margin */
+      padding-bottom: 50px;
     }
 
     /* Footer */
