--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="css-demo/index.html" title="CSS Demo Project">CSS Demo</a></li>
         <li><a href="assets/img/flexbox.png" title="Flexbox Assigment">Flexbox Froggy</a></li>
         <li><a href="assets/img/cssdiner.png" title="CSS Diner EC">CSS Diner</a></li>
+        <li><a href="assets/img/gridgarden.png" title="Grid Garden">Grid Garden</a></li>
         <li>Positioning Lab
           <ul>
             <li><a href="positioning-lab/float-1.html">float-1</a></li>
