--- a/positioning-lab/absolute-1.html
+++ b/positioning-lab/absolute-1.html
@@ -50,9 +50,9 @@
     }
 
     #navy { background:#001f3f; top:0; left:0; }
-    #teal { background:#39CCCC; top:0; right:0; color:#003; }
+    #teal { background:#39CCCC; top:0; right:0; }
     #blue { background:#0074D9; bottom:0; left:0; }
-    #aqua { background:#7FDBFF; bottom:0; right:0; color:#003; }
+    #aqua { background:#7FDBFF; bottom:0; right:0; }
 
     /* ---- Center panel inside wrapper ---- */
     .panel{
