--- a/positioning-lab/absolute-2.html
+++ b/positioning-lab/absolute-2.html
@@ -1,67 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-
+  
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Positioning Lab</title>
-  <style type="text/css">
+  <style>
     /* ---------------Box Sizing----------------- */
-    html {
-      box-sizing: border-box;
-    }
-    *,
-    *:before,
-    *:after {
-      box-sizing: inherit;
-    }
-    body {
-      background-color: #ECECEC;
-      font-weight: bold;
-      font-family: Tahoma, Geneva, sans-serif;
-      color: #FFF;
-      text-align: center;
-      line-height: 24px;
-    }
-    #wrapper {
-      background-color: #FFF;
-      border: 1px solid #c0c0c0;
-      width: 800px;
-      margin-right: auto;
-      margin-left: auto;
+    html { box-sizing: border-box; }
+    *, *::before, *::after { box-sizing: inherit; }
+
+    /* ---------------Base----------------- */
+    body{
+      margin:0;
+      background:#ECECEC;
+      font: bold 16px Tahoma, Geneva, sans-serif;
+      color:#FFF;
+      text-align:center;
+      line-height:24px;
       text-shadow: 2px 2px #000;
     }
-    #navy {
-      background-color: #001f3f;
+
+    h1{
+      color:#000;
+      font-weight:normal;
+      padding: 40px 0 20px;
+      text-shadow:none;
+      margin:0;
     }
-    #teal {
-      background-color: #39CCCC;
+
+    /* ---------------Wrapper----------------- */
+    #wrapper{
+      position:relative;                 /* anchor for absolute children */
+      width:800px;
+      min-height:520px;
+      margin:0 auto 60px;
+      background:#FFF;
+      border:1px solid #c0c0c0;
+      overflow:hidden;                   /* keep corner tiles inside border */
     }
-    #blue {
-      background-color: #0074D9;
+
+    /* ---------------Corner tiles (absolute)----------------- */
+    .tile{
+      position:absolute;
+      width:90px;
+      height:90px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      user-select:none;
     }
-    #aqua {
-      background-color: #7FDBFF;
+
+    #navy { background:#001f3f; top:0; left:0; }
+    #teal { background:#39CCCC; top:0; right:0; color:#113; text-shadow:1px 1px #fff4; }
+    #blue { background:#0074D9; bottom:0; left:0; }
+    #aqua { background:#7FDBFF; bottom:0; right:0; color:#113; text-shadow:1px 1px #fff4; }
+
+    /* ---------------Center panel + footer box----------------- */
+    .panel{
+      width:560px;
+      height:180px;
+      margin:120px auto;                 /* centers the panel in wrapper */
+      background:#fff;
+      border:1px solid #d9d9d9;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      box-shadow:0 0 0 0 transparent;
     }
-    #footer {
-      background-color: #666;
-    }
-    h1 {
-      color: #000;
-      font-weight: normal;
-      padding: 50px;
+
+    #footer{
+      width:110px;
+      height:120px;
+      background:#666;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      text-shadow:2px 2px #000;
     }
   </style>
 </head>
 <body>
-  <h1>absolute-2</h1>
+  <h1>Exercise</h1>
+
   <section id="wrapper">
-    <div id="navy">Navy</div>
-    <div id="teal">Teal</div>
-    <div id="blue">Blue</div>
-    <div id="aqua">Aqua</div>
-    <div id="footer">Footer</div>
+    <!-- Corner tiles -->
+    <div id="navy" class="tile">Navy</div>
+    <div id="teal" class="tile">Teal</div>
+    <div id="blue" class="tile">Blue</div>
+    <div id="aqua" class="tile">Aqua</div>
+
+    <!-- Center panel with the footer box -->
+    <div class="panel">
+      <div id="footer">Footer</div>
+    </div>
   </section>
 </body>
 
