--- a/positioning-lab/absolute-1.html
+++ b/positioning-lab/absolute-1.html
@@ -81,7 +81,7 @@
 </head>
 
 <body>
-  <h1>Exercise</h1>
+  <h1>Absolute 1</h1>
 
   <!-- Corner boxes OUTSIDE wrapper -->
   <div id="navy" class="tile">Navy</div>
