--- a/positioning-lab/absolute-2.html
+++ b/positioning-lab/absolute-2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  
+
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -82,7 +82,7 @@
   </style>
 </head>
 <body>
-  <h1>Exercise</h1>
+  <h1>Absolute 2</h1>
 
   <section id="wrapper">
     <!-- Corner tiles -->
