--- a/positioning-lab/absolute-2.html
+++ b/positioning-lab/absolute-2.html
@@ -8,81 +8,102 @@
   <title>Positioning Lab</title>
   <style>
     /* ---------------Box Sizing----------------- */
-    html { box-sizing: border-box; }
-    *, *::before, *::after { box-sizing: inherit; }
+    html {
+      box-sizing: border-box;
+    }
+    *,
+    *::before,
+    *::after {
+      box-sizing: inherit;
+    }
 
     /* ---------------Base----------------- */
-    body{
-      margin:0;
-      background:#ECECEC;
+    body {
+      margin: 0;
+      background: #ECECEC;
       font: bold 16px Tahoma, Geneva, sans-serif;
-      color:#FFF;
-      text-align:center;
-      line-height:24px;
+      color: #FFF;
+      text-align: center;
+      line-height: 24px;
       text-shadow: 2px 2px #000;
     }
 
-    h1{
-      color:#000;
-      font-weight:normal;
+    h1 {
+      color: #000;
+      font-weight: normal;
       padding: 40px 0 20px;
-      text-shadow:none;
-      margin:0;
+      text-shadow: none;
+      margin: 0;
     }
 
     /* ---------------Wrapper----------------- */
-    #wrapper{
-      position:relative;                 /* anchor for absolute children */
-      width:800px;
-      min-height:520px;
-      margin:0 auto 60px;
-      background:#FFF;
-      border:1px solid #c0c0c0;
-      overflow:hidden;                   /* keep corner tiles inside border */
+    #wrapper {
+      position: relative;
+      width: 800px;
+      height: 600px; /* taller */
+      margin: 0 auto 60px;
+      background: #FFF;
+      border: 1px solid #c0c0c0;
     }
 
-    /* ---------------Corner tiles (absolute)----------------- */
-    .tile{
-      position:absolute;
-      width:90px;
-      height:90px;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      user-select:none;
+    /* ---------------Corner tiles----------------- */
+    .tile {
+      position: absolute;
+      width: 90px;
+      height: 90px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      user-select: none;
     }
 
-    #navy { background:#001f3f; top:0; left:0; }
-    #teal { background:#39CCCC; top:0; right:0; color:#113; text-shadow:1px 1px #fff4; }
-    #blue { background:#0074D9; bottom:0; left:0; }
-    #aqua { background:#7FDBFF; bottom:0; right:0; color:#113; text-shadow:1px 1px #fff4; }
-
-    /* ---------------Center panel + footer box----------------- */
-    .panel{
-      width:560px;
-      height:180px;
-      margin:120px auto;                 /* centers the panel in wrapper */
-      background:#fff;
-      border:1px solid #d9d9d9;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      box-shadow:0 0 0 0 transparent;
+    #navy {
+      background: #001f3f;
+      top: 0;
+      left: 0;
     }
 
-    #footer{
-      width:110px;
-      height:120px;
-      background:#666;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      text-shadow:2px 2px #000;
+    #teal {
+      background: #39CCCC;
+      top: 0;
+      right: 0;
+      color: #113;
+      text-shadow: 1px 1px #fff4;
+    }
+
+    #blue {
+      background: #0074D9;
+      bottom: 0;
+      left: 0;
+    }
+
+    #aqua {
+      background: #7FDBFF;
+      bottom: 0;
+      right: 0;
+      color: #113;
+      text-shadow: 1px 1px #fff4;
+    }
+
+    /* ---------------Footer box----------------- */
+    #footer {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 110px;
+      height: 120px;
+      background: #666;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-shadow: 2px 2px #000;
     }
   </style>
 </head>
+
 <body>
-  <h1>Absolute 2</h1>
+  <h1>Exercise</h1>
 
   <section id="wrapper">
     <!-- Corner tiles -->
@@ -91,10 +112,8 @@
     <div id="blue" class="tile">Blue</div>
     <div id="aqua" class="tile">Aqua</div>
 
-    <!-- Center panel with the footer box -->
-    <div class="panel">
-      <div id="footer">Footer</div>
-    </div>
+    <!-- Center footer -->
+    <div id="footer">Footer</div>
   </section>
 </body>
 
