--- a/positioning-lab/float-1.html
+++ b/positioning-lab/float-1.html
@@ -7,96 +7,61 @@
   <title>Positioning Lab</title>
   <style>
     /* ---------------Box Sizing----------------- */
-    html { box-sizing: border-box; }
-    *, *::before, *::after { box-sizing: inherit; }
+    html {
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+body {
+  background-color: #ececec;
+  font-weight: bold;
+  font-family: Tahoma, Geneva, sans-serif;
+  color: #fff;
+  text-align: center;
+  line-height: 24px;
+}
+#wrapper {
+  background-color: #fff;
+  border: 1px solid #c0c0c0;
+  width: 800px;
+  margin:0 auto;
+  text-shadow: 2px 2px #000;
+  padding-top: 20px;
+}
 
-    body {
-      background: #ECECEC;
-      font: bold 16px Tahoma, Geneva, sans-serif;
-      color: #FFF;
-      text-align: center;
-      line-height: 24px;
-    }
+.tile {
+  width: 370px;
+  height: 150px;
+  float: left;
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
+#navy {
+  background-color: #001f3f;
+}
+#teal {
+  background-color: #39cccc;
+}
+#blue {
+  background-color: #0074d9;
+}
+#aqua {
+  background-color: #7fdbff;
+}
+#footer {
+  background-color: #666;
+  clear: both;
+  margin: 20px;
+}
+h1 {
+  color: #000;
+  font-weight: normal;
+  padding: 50px;
+}
 
-    #wrapper {
-      background: #FFF;
-      border: 1px solid #c0c0c0;
-      width: 800px;
-      margin: 0 auto;
-      text-shadow: 2px 2px #000;
-      padding: 20px;
-      overflow: hidden;  /* contain floats */
-    }
-
-    #navy {
-      background-color: #001f3f;
-      width: 360px;
-      height: 150px;
-      float: left;
-      margin-right: 20px;
-      margin-bottom: 15px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 18px;
-    }
-
-    #teal {
-      background-color: #39CCCC;
-      width: 360px;
-      height: 150px;
-      float: left;
-      margin-bottom: 15px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 18px;
-    }
-
-    #blue {
-      background-color: #0074D9;
-      width: 360px;
-      height: 150px;
-      float: left;
-      clear: left;
-      margin-right: 20px;
-      margin-bottom: 15px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 18px;
-    }
-
-    #aqua {
-      background-color: #7FDBFF;
-      width: 360px;
-      height: 150px;
-      float: left;
-      margin-bottom: 15px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 18px;
-    }
-
-    #footer {
-      background-color: #666;
-      clear: both;
-      height: 40px;
-      line-height: 40px;
-      color: #FFF;
-      margin-top: 10px;
-      width: 760px; /* perfectly fits inside 800px wrapper with 20px padding on each side */
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    h1 {
-      color: #000;
-      font-weight: normal;
-      padding: 30px;
-      text-shadow: none;
-    }
   </style>
 </head>
 <body>
