--- a/positioning-lab/absolute-2.html
+++ b/positioning-lab/absolute-2.html
@@ -61,6 +61,8 @@
       background: #001f3f;
       top: 0;
       left: 0;
+      text-shadow: 1px 1px #fff4;
+
     }
 
     #teal {
@@ -74,6 +76,8 @@
       background: #0074D9;
       bottom: 0;
       left: 0;
+      text-shadow: 1px 1px #fff4;
+
     }
 
     #aqua {
