--- a/positioning-lab/absolute-1.html
+++ b/positioning-lab/absolute-1.html
@@ -29,6 +29,7 @@
 
     /* ---- Wrapper ---- */
     #wrapper{
+      align-self: auto;
       position:relative;
       width:800px;
       height:150px;
