--- a/positioning-lab/absolute-1.html
+++ b/positioning-lab/absolute-1.html
@@ -29,7 +29,7 @@
 
     /* ---- Wrapper ---- */
     #wrapper{
-      align-self: auto;
+      align-items: auto;
       position:relative;
       width:800px;
       height:150px;
