--- a/positioning-lab/absolute-1.html
+++ b/positioning-lab/absolute-1.html
@@ -29,7 +29,8 @@
 
     /* ---- Wrapper ---- */
     #wrapper{
-      align-items: auto;
+      align-items:center;
+      justify-content:center;
       position:relative;
       width:800px;
       height:150px;
