--- a/positioning-lab/absolute-1.html
+++ b/positioning-lab/absolute-1.html
@@ -32,7 +32,8 @@
       position:relative;
       width:800px;
       height:150px;
-      margin:0 auto;
+      margin-right: auto;
+      margin-left: auto;
       background:#fff;
       border:1px solid #c0c0c0;
     }
