--- a/positioning-lab/absolute-1.html
+++ b/positioning-lab/absolute-1.html
@@ -18,6 +18,7 @@
       color:#FFF;
       text-align:center;
       line-height:24px;
+      position:relative;
     }
 
     h1{
@@ -27,18 +28,7 @@
       text-shadow:none;
     }
 
-    /* ---- Wrapper ---- */
-    #wrapper{
-      position:relative;
-      width:800px;
-      height:150px;
-      margin-right: auto;
-      margin-left: auto;
-      background:#fff;
-      border:1px solid #c0c0c0;
-    }
-
-    /* ---- Corner tiles ON PAGE (not wrapper) ---- */
+    /* ---- Corner tiles ON PAGE ---- */
     .tile{
       position:fixed;
       width:90px;
@@ -48,6 +38,7 @@
       justify-content:center;
       text-shadow:2px 2px #000;
       user-select:none;
+      z-index:10;
     }
 
     #navy { background:#001f3f; top:0; left:0; }
@@ -55,27 +46,19 @@
     #blue { background:#0074D9; bottom:0; left:0; }
     #aqua { background:#7FDBFF; bottom:0; right:0; }
 
-    /* ---- Center panel inside wrapper ---- */
-    .panel{
-      width:560px;
-      height:90px;
-      position:absolute;
-      top:50%;
-      left:50%;
-      transform:translate(-50%,-50%);
-      background:#fff;
-      display:flex;
-      justify-content:center;
-      align-items:center;
-    }
-
+    /* ---- Center Footer in entire page ---- */
     #footer{
+      position:fixed;
       width:110px;
       height:120px;
       background:#666;
       display:flex;
       align-items:center;
       justify-content:center;
+      top:50%;
+      left:50%;
+      transform:translate(-50%, -50%);
+      text-shadow:2px 2px #000;
     }
   </style>
 </head>
@@ -83,18 +66,14 @@
 <body>
   <h1>Absolute 1</h1>
 
-  <!-- Corner boxes OUTSIDE wrapper -->
+  <!-- Corner boxes -->
   <div id="navy" class="tile">Navy</div>
   <div id="teal" class="tile">Teal</div>
   <div id="blue" class="tile">Blue</div>
   <div id="aqua" class="tile">Aqua</div>
 
-  <!-- Layout box -->
-  <section id="wrapper">
-    <div class="panel">
-      <div id="footer">Footer</div>
-    </div>
-  </section>
+  <!-- Footer centered on full page -->
+  <div id="footer">Footer</div>
 
 </body>
 </html>
