--- a/positioning-lab/absolute-1.html
+++ b/positioning-lab/absolute-1.html
@@ -28,6 +28,17 @@
       text-shadow:none;
     }
 
+    #wrapper {
+      background-color: #FFF;
+      border: 1px solid #c0c0c0;
+      width: 800px;
+      margin: 0 auto;
+      text-shadow: 2px 2px #000;
+      padding: 20px;
+      overflow: hidden; /* contain floats */
+    }
+
+
     /* ---- Corner tiles ON PAGE ---- */
     .tile{
       position:fixed;
