--- a/positioning-lab/absolute-1.html
+++ b/positioning-lab/absolute-1.html
@@ -29,15 +29,13 @@
     }
 
     #wrapper {
-      background-color: #FFF;
-      border: 1px solid #c0c0c0;
+      position: relative;
       width: 800px;
-      margin: 0 auto;
-      text-shadow: 2px 2px #000;
-      padding: 20px;
-      overflow: hidden; /* contain floats */
+      height: 600px; /* taller */
+      margin: 0 auto 60px;
+      background: #FFF;
+      border: 1px solid #c0c0c0;
     }
-
 
     /* ---- Corner tiles ON PAGE ---- */
     .tile{
