--- a/positioning-lab/absolute-1.html
+++ b/positioning-lab/absolute-1.html
@@ -5,12 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Positioning Lab</title>
-
+  
   <style>
-    html, body {
-      height: 100%;
-    }
-
+    html, body { height: 100%; }
     body{
       margin:0;
       background:#ECECEC;
@@ -18,9 +15,7 @@
       color:#FFF;
       text-align:center;
       line-height:24px;
-      position:relative;
     }
-
     h1{
       margin:20px 0 40px;
       color:#000;
@@ -28,37 +23,39 @@
       text-shadow:none;
     }
 
-    /* ---- Corner tiles ON PAGE ---- */
+    /* Corner tiles */
     .tile{
       position:fixed;
-      width:90px;
-      height:90px;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      text-shadow:2px 2px #000;
-      user-select:none;
-      z-index:10;
+      width:90px; height:90px;
+      display:flex; align-items:center; justify-content:center;
+      text-shadow:2px 2px #000; user-select:none; z-index:10;
     }
-
     #navy { background:#001f3f; top:0; left:0; }
     #teal { background:#39CCCC; top:0; right:0; }
     #blue { background:#0074D9; bottom:0; left:0; }
     #aqua { background:#7FDBFF; bottom:0; right:0; }
 
-    /* ---- Center Footer in entire page ---- */
+    /* Centered white panel behind footer (center of full page) */
+    .center-panel{
+      position:fixed;
+      top:50%; left:50%;
+      transform:translate(-50%,-50%);
+      width:560px; height:120px;
+      background:#fff;
+      border:1px solid #c0c0c0;
+      z-index:1;               /* behind footer */
+    }
+
+    /* Footer box centered on page, above panel */
     #footer{
       position:fixed;
-      width:110px;
-      height:120px;
+      top:50%; left:50%;
+      transform:translate(-50%,-50%);
+      width:110px; height:120px;
       background:#666;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      top:50%;
-      left:50%;
-      transform:translate(-50%, -50%);
+      display:flex; align-items:center; justify-content:center;
       text-shadow:2px 2px #000;
+      z-index:2;               /* above the white panel */
     }
   </style>
 </head>
@@ -72,7 +69,8 @@
   <div id="blue" class="tile">Blue</div>
   <div id="aqua" class="tile">Aqua</div>
 
-  <!-- Footer centered on full page -->
+  <!-- Centered white panel and footer -->
+  <div class="center-panel" aria-hidden="true"></div>
   <div id="footer">Footer</div>
 
 </body>
