--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
             <li><a href="positioning-lab/absolute-2.html">absolute-2</a></li>
           </ul>
         </li>
+        <li>CSS Grid Lab
+          <ul>
+            <li><a href="css-grid-lab/grid-two-col-equal.html">grid-two-equal</a></li>
+            <li><a href="css-grid-lab/grid-two-col-left.html">grid-two-left</a></li>
+            <li><a href="css-grid-lab/grid-two-col-right.html">grid-2-right</a></li>
+            <li><a href="css-grid-lab/grid-two-col-stacked.html">grid-2-stacked</a></li>
+          </ul>
+        </li>
+
     </ul>
   </nav>
 </body>
