--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </li>
         <li>CSS Grid Lab
           <ul>
-            <li><a href="css-grid-lab/grid-two-col-equal.html">grid-two-equal</a></li>
-            <li><a href="css-grid-lab/grid-two-col-left.html">grid-two-left</a></li>
+            <li><a href="css-grid-lab/grid-two-col-equal.html">grid-2-equal</a></li>
+            <li><a href="css-grid-lab/grid-two-col-left.html">grid-2-left</a></li>
             <li><a href="css-grid-lab/grid-two-col-right.html">grid-2-right</a></li>
             <li><a href="css-grid-lab/grid-two-col-stacked.html">grid-2-stacked</a></li>
           </ul>
