--- a/css-grid-lab/grid-two-col-left.html
+++ b/css-grid-lab/grid-two-col-left.html
@@ -19,7 +19,7 @@
 
     /* ---------------Base Styles----------------- */
     body {
-      background-color: #111;
+      background-color: #ffffff;
       color: #000;
     }
 
@@ -65,7 +65,7 @@
       grid-area: blog;
     }
   </style>
-  
+
 </head>
 
 <body>
