--- a/css-grid-lab/grid-two-col-right.html
+++ b/css-grid-lab/grid-two-col-right.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS Grid Demo</title>
+  <title>CSS Grid Demo - Two Column Right</title>
   <style>
-    /*  ---------------Box Sizing-----------------  */
+    /* ---------------Box Sizing----------------- */
     html {
       box-sizing: border-box;
     }
@@ -17,7 +17,12 @@
       box-sizing: inherit;
     }
 
-    /* Starter */
+    /* ---------------Base Styles----------------- */
+    body {
+      background-color: #111;
+      color: #000;
+    }
+
     main>* {
       font-family: Avenir, Montserrat, Corbel, "URW Gothic", source-sans-pro,
         sans-serif;
@@ -29,12 +34,38 @@
 
     main {
       display: grid;
+      grid-template-areas:
+        "header header"
+        "content aside"
+        "blog aside"
+        "footer footer";
+      grid-template-columns: 2fr 1fr;
       gap: 20px;
       max-width: 80vw;
       margin: 20px auto;
     }
-  </style>
 
+    header.primary {
+      grid-area: header;
+    }
+
+    footer.primary {
+      grid-area: footer;
+    }
+
+    aside {
+      grid-area: aside;
+    }
+
+    #content {
+      grid-area: content;
+    }
+
+    #blog {
+      grid-area: blog;
+    }
+  </style>
+  
 </head>
 
 <body>
@@ -42,28 +73,30 @@
     <header class="primary">
       <h1>Site Header</h1>
     </header>
+
     <section id="content">
       <header>
         <h2>#Content Section Header</h2>
       </header>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus expedita repellendus aliquid iusto consectetur ut velit totam explicabo magnam. Culpa non suscipit doloribus corporis neque.</p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos inventore quo exercitationem temporibus magni deserunt, quasi repellendus reiciendis? Quos, facere doloribus optio quasi numquam dolore!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos inventore quo exercitationem temporibus magni deserunt, quasi repellendus reiciendis? Quos, facere doloribus optio quasi numquam dolore!</p>
       <footer>Section Footer</footer>
     </section>
+
     <section id="blog">
       <header>
         <h2>#Blog Section Header</h2>
       </header>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus expedita repellendus aliquid iusto consectetur ut velit totam explicabo magnam. Culpa non suscipit doloribus corporis neque.</p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos inventore quo exercitationem temporibus magni deserunt, quasi repellendus reiciendis? Quos, facere doloribus optio quasi numquam dolore!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos inventore quo exercitationem temporibus magni deserunt, quasi repellendus reiciendis? Quos, facere doloribus optio quasi numquam dolore!</p>
       <footer>Section Footer</footer>
     </section>
+
     <aside>
       <h2>Aside</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia non eaque dolorum sequi velit molestiae ratione ducimus ipsum excepturi atque.</p>
     </aside>
+
     <footer class="primary">Site Footer</footer>
   </main>
 </body>
