--- a/css-grid-lab/grid-two-col-right.html
+++ b/css-grid-lab/grid-two-col-right.html
@@ -19,7 +19,7 @@
 
     /* ---------------Base Styles----------------- */
     body {
-      background-color: #111;
+      background-color: #ffffff;
       color: #000;
     }
 
