--- a/css-grid-lab/grid-two-col-stacked.html
+++ b/css-grid-lab/grid-two-col-stacked.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CSS Grid Demo – Two Col Stacked Right</title>
+  <title>CSS Grid Demo Two Col Stacked Right</title>
   <style>
     /* ---------- Box Sizing ---------- */
     html { box-sizing: border-box; }
