--- a/css-grid-lab/grid-two-col-stacked.html
+++ b/css-grid-lab/grid-two-col-stacked.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS Grid Demo – Two Col Stacked</title>
+  <title>CSS Grid Demo</title>
   <style>
     /* ---------------Box Sizing----------------- */
     html {
