--- a/mars-rovers/index.html
+++ b/mars-rovers/index.html
@@ -7,12 +7,12 @@
   <meta name="keywords" content="NASA, Mars Rover, Curiosity, Perseverance, Space Exploration, Gale Crater, Jezero Crater">
   <meta name="robots" content="noindex">
   <title>NASA Mars Rovers | Home</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=3">
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to main content</a>
   <header role="banner">
-    <img src="images/nasa-logo.png" alt="NASA logo" class="logo" width="200" height="171">
+    <img src="images/nasa-logo.png" alt="NASA logo" class="logo">
     <h1>NASA Mars Rovers</h1>
     <p class="tagline">Robotic Explorers on the Red Planet</p>
     <nav role="navigation" aria-label="Main Navigation">
@@ -22,7 +22,7 @@
         <li><a href="faq.html">FAQ</a></li>
       </ul>
     </nav>
-    <button id="toggle-dark">DARK MODE</button>
+    <button id="toggle-dark">Dark Mode</button>
   </header>
 
   <main id="main" role="main">
@@ -41,7 +41,7 @@
           <li><strong>Discoveries:</strong> Ancient lake environments; organics; methane variations.</li>
           <li><strong>Key features:</strong> RTG power source, ChemCam laser, SAM analysis suite.</li>
         </ul>
-        <img src="images/curiosity.jpg" alt="Curiosity rover on the Martian surface" class="rover-img" width="1280" height="720" loading="lazy">
+        <img src="images/curiosity.jpg" alt="Curiosity rover on the Martian surface" class="rover-img" loading="lazy">
       </article>
 
       <article>
@@ -52,7 +52,7 @@
           <li><strong>Discoveries:</strong> River delta deposits; igneous rocks; preserved organic carbon.</li>
           <li><strong>Key features:</strong> Sample caching arm, Ingenuity helicopter, SHERLOC & PIXL tools.</li>
         </ul>
-        <img src="images/perseverance.jpg" alt="Perseverance rover in Jezero Crater" class="rover-img" width="1280" height="720" loading="lazy">
+        <img src="images/perseverance.jpg" alt="Perseverance rover in Jezero Crater" class="rover-img" loading="lazy">
       </article>
     </section>
   </main>
@@ -60,7 +60,7 @@
   <footer role="contentinfo">
     <p>This website was created as a student project for educational purposes. NASA is not affiliated with or endorsing this work.</p>
     <p>Contact: <a href="mailto:info@example.com">info@example.com</a></p>
-    <p><a href="https://mars.nasa.gov" target="_blank" rel="noopener noreferrer">Visit NASA's Mars Exploration Program</a></p>
+    <p><a href="https://mars.nasa.gov" target="_blank" rel="noopener noreferrer">Visit NASA’s Mars Exploration Program</a></p>
   </footer>
 
   <script src="toggle.js"></script>
