--- a/mars-rovers/faq.html
+++ b/mars-rovers/faq.html
@@ -7,12 +7,12 @@
   <meta name="keywords" content="NASA, Mars Rover, Curiosity, Perseverance, Mars FAQ, Space Exploration, Ingenuity, RTG, Jezero Crater">
   <meta name="robots" content="noindex">
   <title>NASA Mars Rovers | FAQ</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=3">
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to main content</a>
   <header>
-    <img src="images/nasa-logo.png" alt="NASA logo" class="logo" width="200" height="171">
+    <img src="images/nasa-logo.png" alt="NASA logo" class="logo">
     <h1>Frequently Asked Questions</h1>
     <nav role="navigation" aria-label="Main Navigation">
       <ul class="nav">
@@ -21,7 +21,7 @@
         <li><a href="faq.html" aria-current="page">FAQ</a></li>
       </ul>
     </nav>
-    <button id="toggle-dark">DARK MODE</button>
+    <button id="toggle-dark">Dark Mode</button>
   </header>
 
   <main id="main">
@@ -29,7 +29,7 @@
       <h2>Common Questions</h2>
       <details>
         <summary>How do the Mars rovers communicate with Earth?</summary>
-        <p>Rovers send data through Mars orbiters, which relay signals back to NASA's Deep Space Network antennas on Earth.</p>
+        <p>Rovers send data through Mars orbiters, which relay signals back to NASA’s Deep Space Network antennas on Earth.</p>
       </details>
       <details>
         <summary>Why send rovers instead of humans?</summary>
