--- a/mars-rovers/mission.html
+++ b/mars-rovers/mission.html
@@ -7,12 +7,12 @@
   <meta name="keywords" content="NASA, Mars Rover, Curiosity, Perseverance, Mission History, Launch, Landing, Jezero Crater, Gale Crater">
   <meta name="robots" content="noindex">
   <title>NASA Mars Rovers | Mission History</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=3">
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to main content</a>
   <header>
-    <img src="images/nasa-logo.png" alt="NASA logo" class="logo" width="200" height="171">
+    <img src="images/nasa-logo.png" alt="NASA logo" class="logo">
     <h1>Mission History</h1>
     <nav role="navigation" aria-label="Main Navigation">
       <ul class="nav">
@@ -21,7 +21,7 @@
         <li><a href="faq.html">FAQ</a></li>
       </ul>
     </nav>
-    <button id="toggle-dark">DARK MODE</button>
+    <button id="toggle-dark">Dark Mode</button>
   </header>
 
   <main id="main">
