rough draft and final

--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
         </li>
         <li>Micro Site NASA Project
           <ul>
-            <li><a href="mars-rovers/index.html">Home Page</a></li>
-            <li><a href="mars-rovers/mission.html">Mission History</a></li>
-            <li><a href="mars-rovers/faq.html">FAQ</a></li>
+            <li><a href="mars-rovers-v1/index.html">Rough Draft</a></li>
+            <li><a href="mars-rovers-v2/index.html">Final</a></li>
           </ul>
         </li>
 
