--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </li>
         <li>Micro Site NASA Project
           <ul>
-            <li><a href="mars-rovers-v1/index.html">Rough Draft</a></li>
+            <li><a href="mars-rover-v1/index.html">Rough Draft</a></li>
             <li><a href="mars-rovers-v2/index.html">Final</a></li>
           </ul>
         </li>
